# People-Counting-Analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  config.yaml  database.py  docker-compose.yaml  etl_master_script.py  freetds.conf  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  style.css  tailwind.config.js
.streamlit/: config.toml
__trash__/: database.py
app/: dependencies.py  main.py  routers.py  schemas.py  services.py
app/core/: README.md  caching.py  config.py  data_handler.py
app/etl/: extract.py  load.py  schemas.py  state.py  transform.py
app/static/css/: style.css
app/static/js/: dashboard.js
app/templates/: base.html  dashboard.html
app/templates/partials/: _charts.html  _error_modal.html  _filters.html  _header.html  _metrics.html  _sidebar.html  _table.html
app/utils/: logger.py
configs/: logger.yaml  tables.yaml  time_offsets.yaml
template/: base.html  dashboard.html
template/partials/: _error_modal.html  _filters.html  _footer.html  _header.html  _sidebar.html  _skeleton.html  _table.html
template/statics/css/: input.css  style.css
template/statics/images/: site.webmanifest
template/statics/js/: dashboard.js
tools/: check_drivers.py  http_server.py
